# isolation-minmax

./: .gitignore  CMakeLists.txt  Makefile  README.md  agent.cpp  agent.h  behaviour.cpp  behaviour1.cpp  behaviour2.cpp  behaviourHalf.cpp  behaviourHalfVSnormal.cpp  board.cpp  board.h  bucketAgent.cpp  bucketAgent.h  interface.cpp  interface.h  log.cpp  log.h  lookup.cpp  main.cpp  minMax.cpp  minMax.h  old  orders.h  simple2weighted  transposition.cpp  weightedDefA.cpp  weightedDefA.h  weightedOffen2simple.txt  weightedOffenA.cpp  weightedOffenA.h  zobrist.cpp
src/: agent.cpp  agent.h  board.cpp  board.h  interface.cpp  interface.h  log.cpp  log.h  main.cpp  transposition.cpp  transposition.h  zobrist.cpp  zobrist.h
